# rag-platform

./: .env.example  .gitignore  INTEGRATIONS.md  PRODUCT.md  RAGKIT.md  README.md  ROADMAP.md  architecture-animation.html  docker-compose.yml
.claude/commands/: rag-audit.md  rag-backup.md  rag-embed-check.md  rag-ingest.md  rag-logs.md  rag-user.md  (+3 more)
admin-ui/: .env.example  Dockerfile  pyproject.toml
admin-ui/src/admin_ui/: client.py  config.py  main.py
admin-ui/src/admin_ui/routers/: analytics.py  audit.py  auth_router.py  connectors.py  dashboard.py  documents.py  knowledge.py  orgs.py  settings.py  users.py
admin-ui/src/admin_ui/templates/: analytics.html  audit.html  base.html  connector_detail.html  connectors.html  dashboard.html  document_detail.html  documents.html  knowledge.html  login.html  org_detail.html  orgs.html  settings.html  users.html
backend/: .env.example  Dockerfile  pyproject.toml
backend/src/rag_chatbot/: config.py  observability.py
backend/src/rag_chatbot/agent/: graph.py  nodes.py  state.py
backend/src/rag_chatbot/agent/actions/: jira_actions.py  notify.py  registry.py  servicenow_actions.py
backend/src/rag_chatbot/api/: admin_router.py  audit.py  deps.py  main.py  rate_limit.py  zitadel_enrich.py
backend/src/rag_chatbot/auth/: abac.py  oidc.py  router.py  tokens.py
backend/src/rag_chatbot/connectors/: azure_ad.py  base.py  confluence.py  gdrive.py  incident_processor.py  jira.py  manual.py  okta.py  registry.py  servicenow.py  sharepoint.py  slack.py  snow_token_exchange.py  sync_engine.py  teams.py  workday.py  zendesk.py
backend/src/rag_chatbot/db/: connection.py  schema.sql
backend/src/rag_chatbot/db/migrations/: 001_multitenancy.sql  002_provider_config.sql  003_nvidia_config.sql  004_knowledge_mesh.sql  005_auth.sql  006_audit_log.sql  007_feedback.sql  008_cleanup.sql  009_doc_topics.sql  010_org_domains_rbac.sql  011_zitadel_actions.sql  012_abac_labels.sql
backend/src/rag_chatbot/embeddings/: gemini_embedder.py
backend/src/rag_chatbot/ingestion/: chunker.py  dlp.py  loader.py  pipeline.py
backend/src/rag_chatbot/llm/: client.py
backend/src/rag_chatbot/mcp_server/: server.py
backend/src/rag_chatbot/retrieval/: vector_store.py
backend/tests/: conftest.py  test_chunker.py  test_nodes.py
clickhouse/: config.xml
docs/: sso-obo-setup.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
scripts/: backup.sh  deploy.sh  restore.sh
(+56 files in other folders)
