[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-admin-ui"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/admin_ui"]
