[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-chatbot"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "fastmcp>=2.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
    "pypdf2>=3.0.0",
    "tiktoken>=0.7.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
    "slowapi>=0.1.9",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rag_chatbot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
